crates/fig-parser/tests/snapshots/integration_tests__edge_cases__deeply_nested_types.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - A
      generic_params: []
      aliased_type:
        Nullable:
          Pointer:
            nullable: false
            mutable: true
            element_type:
              Nullable:
                Pointer:
                  nullable: false
                  mutable: false
                  element_type:
                    Array:
                      element_type:
                        Nullable: I32
                      size:
                        IntegerLiteral:
                          base: Decimal
                          digits: "4"
                          suffix: ~
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - B
      generic_params: []
      aliased_type:
        Pointer:
          nullable: false
          mutable: true
          element_type:
            Pointer:
              nullable: false
              mutable: true
              element_type:
                Pointer:
                  nullable: false
                  mutable: true
                  element_type: U8
  - TypeAlias:
      visibility: Default
      annotations: []
      name:
        segments:
          - C
      generic_params: []
      aliased_type:
        Nullable:
          Pointer:
            nullable: false
            mutable: false
            element_type:
              Nullable:
                Pointer:
                  nullable: false
                  mutable: false
                  element_type:
                    Nullable:
                      Pointer:
                        nullable: false
                        mutable: false
                        element_type: U8
