crates/fig-parser/tests/snapshots/integration_tests__edge_cases__expr_field_binop.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Pt
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: I32
          visibility: Default
          annotations: []
        - name: y
          ty: I32
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: test
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: p
            ty:
              Path:
                path:
                  segments:
                    - Pt
                generic_args: []
        return_types:
          - I32
      body:
        statements:
          - Return:
              BinaryOp:
                lhs:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - p
                    field: x
                    is_propagating: false
                op: Add
                rhs:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - p
                    field: y
                    is_propagating: false
