crates/fig-parser/tests/snapshots/integration_tests__edge_cases__interface_clauses_only.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Interface:
      visibility: Default
      annotations: []
      name:
        segments:
          - Allocator
      generic_params:
        - Type:
            name: T
            bounds:
              - Path:
                  path:
                    segments:
                      - Mem
                  generic_args: []
            default_type: ~
      extends:
        - Path:
            path:
              segments:
                - Display
            generic_args: []
        - Path:
            path:
              segments:
                - Debug
            generic_args: []
      methods: []
  - Interface:
      visibility: Default
      annotations: []
      name:
        segments:
          - MustBeOrdered
      generic_params:
        - Type:
            name: T
            bounds:
              - Path:
                  path:
                    segments:
                      - Ord
                  generic_args: []
            default_type: ~
      extends: []
      methods: []
  - Interface:
      visibility: Default
      annotations: []
      name:
        segments:
          - ExtendsOnly
      generic_params: []
      extends:
        - Path:
            path:
              segments:
                - Display
            generic_args: []
        - Path:
            path:
              segments:
                - Debug
            generic_args: []
      methods: []
